--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </div>
-            <button type="submit" id="btn_guardar" class="btn btn-success mt-3">Guardar</button>
+            <button type="submit" id="btn_guardar" class="btn btn-outline-info mt-3">Guardar</button>
         </form>
     </div>
 
